hdone/objects/Identifier__c.object
<CustomObject>
    <description>Generic identifier. Used to store phone numbers, email, specialties and other identifiers. These are linked to Facilities and Providers in different object.</description>
    <fields>
        <fullName>Bad_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Date__c</fullName>
        <description>Date of last confirmation</description>
        <label>Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_Source__c</fullName>
        <description>Source of confirmation</description>
        <label>Confirmation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Call</fullName>
                </value>
                <value>
                    <fullName>IVR Confirmation</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Master Area Code Table</fullName>
                </value>
                <value>
                    <fullName>Call Back Voicemail</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Not Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Status__c</fullName>
        <description>Auto confirmation status</description>
        <label>Confirmation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reconfirm</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Out of Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Type__c</fullName>
        <description>Type of confirmation response.  May be received from Angel.com, human or other source.</description>
        <label>Confirmation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Answered By Human</fullName>
                </value>
                <value>
                    <fullName>Confirmed Correct</fullName>
                </value>
                <value>
                    <fullName>Confirmed Incorrect</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Line Busy</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Changed</fullName>
                </value>
                <value>
                    <fullName>Refused To Answer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>External Id from Customer. Should be unique across objects for customer.</description>
        <externalId>true</externalId>
        <inlineHelpText>External or Customer Id</inlineHelpText>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description for Identifier if applicable. Used mainly for codes that need further descriptions</description>
        <inlineHelpText>Description for Identifier</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Used to format Master Contact Id if type is email.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalIdFormula__c</fullName>
        <formula>Sf2Sf_PartnerConnection_Id__c &amp; Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExternalIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentifierId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>CASE(  SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Id),
&quot;HealthDetail&quot;,
ExternalId__c,&quot;Error&quot;)

/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>IdentifierId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifierTypeCount__c</fullName>
        <description>Count of number of associated IdentifierTypes. Updated with Flow on a real time basis when Identifier is called so value changes based on criteria</description>
        <inlineHelpText>Count of number of related associated IdentifierTypes</inlineHelpText>
        <label>IdentifierTypeCount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifier_Related_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Identifier</description>
        <inlineHelpText>Related Identifier</inlineHelpText>
        <label>Identifier Related External</label>
        <referenceTo>Identifier__c</referenceTo>
        <relationshipLabel>Identifiers (Identifier Related External)</relationshipLabel>
        <relationshipName>Identifiers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Identifier</description>
        <inlineHelpText>Related Identifier</inlineHelpText>
        <label>Related Identifier</label>
        <referenceTo>Identifier__c</referenceTo>
        <relationshipLabel>Identifiers</relationshipLabel>
        <relationshipName>Identifiers_rel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterRecordid__c</fullName>
        <description>Used for to link records in Big Objects to MasterRecord</description>
        <inlineHelpText>MasterRecordId</inlineHelpText>
        <label>MasterRecordid</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Used to format phone if Master Contact Id type is phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <description>Used for Salesforce to Salesforce sharing</description>
        <formula>/* Gets name of Record Type for Salesforce to Salesforce sharing */
RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record Type Name</inlineHelpText>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedIdentifierIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK( Identifier__c )),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(   Identifier__r.SourceOrg__c  , &quot;Customer&quot;, CASESAFEID( Identifier__c),
&quot;HealthDetail&quot;, Identifier__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Identifier__r.SourceOrg__c , &quot;HealthDetail&quot;,Identifier__r.ExternalId__c,
&quot;Customer&quot;, Identifier__r.Remote_Identifier_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>RelatedIdentifierIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Identifier_Id__c</fullName>
        <description>Remote Identifier Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Identifier Id</inlineHelpText>
        <label>Remote Identifier_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Record_Type__c</fullName>
        <description>Value for Remote Record Type. Used for Salesforce to Salesforce</description>
        <inlineHelpText>Value for Remote Record Type</inlineHelpText>
        <label>Remote Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record should be shared with other organization. Used for Salesforce to Salesforce.</description>
        <inlineHelpText>Should record be shared?</inlineHelpText>
        <label>Share Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Credential</fullName>
                </value>
                <value>
                    <fullName>Job Title</fullName>
                </value>
                <value>
                    <fullName>Language</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Used to format URL if Master Contact Id type is website</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Information for Identifier such as email, phone, etc.</description>
        <externalId>true</externalId>
        <inlineHelpText>Value of Identifier</inlineHelpText>
        <label>Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Identifier</label>
    <listViews>
        <fullName>All_Email</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Do_Not_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Email</label>
    </listViews>
    <listViews>
        <fullName>All_Others</fullName>
        <columns>NAME</columns>
        <columns>Do_Not_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>URL__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Email__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Phone__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Others</label>
    </listViews>
    <listViews>
        <fullName>All_Phone</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Do_Not_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phone__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Phone</label>
    </listViews>
    <listViews>
        <fullName>All_Website</fullName>
        <columns>NAME</columns>
        <columns>URL__c</columns>
        <columns>Do_Not_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>URL__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Website</label>
    </listViews>
    <nameField>
        <displayFormat>identifier-{00000000}</displayFormat>
        <label>Identifier Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identifiers</pluralLabel>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Customer</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <description>Email</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Language</fullName>
        <active>true</active>
        <description>Languages spoken</description>
        <label>Language</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Record</fullName>
        <active>true</active>
        <description>Master Record. Not shared with customer</description>
        <label>Master Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <description>Phone</description>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider_Id</fullName>
        <active>true</active>
        <description>Identifier for healthcare provider. Type is made at the junction object</description>
        <label>Provider Id</label>
    </recordTypes>
    <recordTypes>
        <fullName>Specialty</fullName>
        <active>true</active>
        <label>Specialty</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website</fullName>
        <active>true</active>
        <description>Website</description>
        <label>Website</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>